# git-history-editor

./: PLAN.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json
docs/: distribution-guide.md  privacy-policy.html
run/: README.md  build.sh  launch.sh  start.sh  stop.sh
scripts/: build.sh  notarize.sh  release.sh
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_commands.rs  lib.rs  main.rs
src/lib/api/: commands.ts
src/lib/components/: CommitList.svelte  CommitRow.svelte  EditorPanel.svelte  FilterBar.svelte
